small grammatical errors

--- a/about.html
+++ b/about.html
@@ -148,11 +148,11 @@
           <h2>MALAV PANCHAL</h2>
           <h3>Sales Representative</h3>
           <p class="about-text" id="about-text">Malav Panchal began his career in real estate after being inspired by his own home buying experience. <br><br>
-            An industrious REALTOR® who enjoys interacting with others, I takes the time to forge honest, meaningful relationships with my clients.
+            An industrious REALTOR® who enjoys interacting with others, Malav takes the time to forge honest, meaningful relationships with his clients.
             Through frequent communication and clarification of industry terms and procedures, he strives to ensure they are fully informed and understand all aspects of any purchase or sale.<br><br>
-            Malav graduated studied Electronic Engineering. During his time, he volunteered as an Orientation Leader, encouraging and assisting new students.
+            Malav studied Electronic Engineering. During his time, he volunteered as an Orientation Leader, encouraging and assisting new students.
             He went on to work in the Software industry as a Quality Assurance Engineer. This developed his troubleshooting skills and taught him the importance of attention to detail in every task,
-            svaluable experience he brings with him to his exciting journey as a REALTOR.<br><br>
+            valuable experience he brings with him to his exciting journey as a REALTOR.<br><br>
             Malav is proficient in both spoken and written English, Gujarati and Hindi.</p>
         </div>
       </div>
@@ -166,7 +166,7 @@
         <div class="value-heading">
           <h3 style="color:#fff;">My Values</h3>
           <h2 style="color:#fff;">Integrity & Trust</h2>
-          <p class="value-text" id="value-text">I give the clients I work with my full & undivided attention to truly understand and ensure their needs are being met from the start.<br><br>
+          <p class="value-text" id="value-text">I work with my full & undivided attention to truly understand and ensure their needs are being met from the start.<br><br>
             The fundamental core of any professional relationship is trust. It is important to me that my clients feel that I have their best intentions always in mind.</p>
         </div>
       </div>
