--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 
     <div class="img-banner-fluid col-lg-12">
       <div class="maintxt">
-        Your perfect home awaits you.
+        Your dream home awaits you.
       </div>
     </div>
   </div>
@@ -146,7 +146,7 @@
     <div class="profile" id="profile">
       <img src="images\Malav-circle.png" alt="profile-pic">
       <h2>Meet Malav</h2>
-      <p class="index-meet-text">An industrious REALTOR® who enjoys interacting with others, I takes the time to forge honest, meaningful relationships with my clients.</p>
+      <p class="index-meet-text">An industrious REALTOR® who enjoys interacting with others, I take the time to forge honest, meaningful relationships with my clients.</p>
     </div>
     <div class="social" id="social">
       <h2>Check out my Instagram</h2>
