chnage the quote

--- a/about.html
+++ b/about.html
@@ -170,7 +170,7 @@
             The fundamental core of any professional relationship is trust. It is important to me that my clients feel that I have their best intentions always in mind.</p>
         </div>
       </div>
-      <div class="col img-fluid" style="text-align: right;">
+      <div class="col img-fluid" style="text-align: right";>
         <img class="value-pic" src="images\value.jpg" alt="value-pic">
       </div>
     </div>
