--- a/contact.html
+++ b/contact.html
@@ -17,15 +17,16 @@
 
 <head>
   <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-7XWWRRPFSG"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-207251914-1">
+  </script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
 
-    gtag('config', 'G-7XWWRRPFSG');
+    gtag('config', 'UA-207251914-1');
   </script>
-  
+
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Contact Us | Real Estate by Malav</title>
   <link rel="icon" href="images\Malav.ico">
