--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 
-<head>
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-7XWWRRPFSG"></script>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-207251914-1">
+</script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-7XWWRRPFSG');
+  gtag('config', 'UA-207251914-1');
 </script>
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
