Chnaged title on About page

--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
   </script>
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Home | Real Estate by Malav</title>
+  <title>About | Real Estate by Malav</title>
   <link rel="icon" href="images\Malav.ico">
 
   <!-- Bootstrap 5 CSS link -->
