--- a/index.html
+++ b/index.html
@@ -14,16 +14,20 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-207251914-1">
-</script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+<head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-207251914-1">
+  </script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
 
-  gtag('config', 'UA-207251914-1');
-</script>
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+
+    gtag('js', new Date());
+    gtag('config', 'UA-207251914-1');
+  </script>
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Home | Real Estate by Malav</title>
