added social media icon

--- a/business_card.html
+++ b/business_card.html
@@ -105,8 +105,9 @@
   <div class="bc-middle-container">
     <div class="business-card">
     </div>
-    <div class="save-contact">
-      <a class="btn btn-danger btn-lg col-12" href="https://ovou.com/" role="button">+Add to Contact</a>
+    <div class="row justify-content-evenly save-contact">
+      <a class="btn btn-danger btn-lg col-5 bc-button" href="https://ovou.com/" role="button">+Add to Contact</a>
+      <a class="btn btn-danger btn-lg col-5 bc-button" href="https://ovou.com/" role="button">Get in Touch</a>
     </div>
 
     <hr>
@@ -118,26 +119,47 @@
 
   </div>
 
-  <div class="contact-me-container">
-    <div class="row top-buffer">
-      <div class="col">
-        <a href="https://goo.gl/maps/vvy8qvX4M38NLnsx6">
-          <img src="images\icons\facebook.png" alt="map">
+  <div class="bc-social-container">
+    <div class="row d-flex justify-content-center">
+      <div class="col-3 col-lg-1 col-md-3 col-sm-3 bc-icon">
+        <a href="https://www.facebook.com/malavrealtor/">
+          <img src="images\icons\facebook.png" alt="facebook">
         </a>
       </div>
-      <div class="col">
-        <a href="tel:+16477084395">
-          <img src="images\icons\Instagram.png" alt="map">
+      <div class="col-3 col-lg-1 col-md-3 col-sm-3 bc-icon">
+        <a href="https://www.instagram.com/realtor_malav/">
+          <img src="images\icons\Instagram.png" alt="Instagram">
         </a>
       </div>
-      <div class="col">
-        <a href="mailto:realtor.malav@gmail.com">
+      <div class="col-3 col-lg-1 col-md-3 col-sm-3 bc-icon">
+        <a href="https://api.whatsapp.com/send?phone=16477084395&fbclid=IwAR2XTAOAlZdwc0sTbDoxU7Dr_Fnbr5B_zatjztiW1S6z01JpPQ6BpVzjFMA">
           <img src="images\icons\Whatsapp.png" alt="map">
         </a>
       </div>
-      <div class="col">
+      <div class="col-3 col-lg-1 col-md-3 col-sm-3 bc-icon">
+        <a href="https://vm.tiktok.com/ZMeynsGHY/">
+          <img src="images\icons\Tiktok.png" alt="Whatsapp">
+        </a>
+      </div>
+
+      <div class="col-3 col-lg-1 col-md-3 col-sm-3 bc-icon">
+        <a href="https://goo.gl/maps/vvy8qvX4M38NLnsx6">
+          <img src="images\icons\map.png" alt="map">
+        </a>
+      </div>
+      <div class="col-3 col-lg-1 col-md-3 col-sm-3 bc-icon">
         <a href="mailto:realtor.malav@gmail.com">
-          <img src="images\icons\Tiktok.png" alt="map">
+          <img src="images\icons\email.png" alt="map">
+        </a>
+      </div>
+      <div class="col-3 col-lg-1 col-md-3 col-sm-3 bc-icon">
+        <a href="https://malavpanchal.ca/">
+          <img src="images\icons\web.png" alt="map">
+        </a>
+      </div>
+      <div class="col-3 col-lg-1 col-md-3 col-sm-3 bc-icon">
+        <a href="tel:+16477084395">
+          <img src="images\icons\call.png" alt="map">
         </a>
       </div>
     </div>
@@ -151,7 +173,7 @@
     <a href="https://www.instagram.com/realtor_malav/" class="fa fa-instagram"></a>
     <a href="https://www.snapchat.com/add/malav_panchal" class="fa fa-snapchat-ghost"></a>
     <a href="tel:+16477084395" class="fa fa-mobile"></a>
-    <p class="copyright">© 2021 Malav Panchal.</p>
+    <p class="copyright">© 2022 Malav Panchal.</p>
   </div>
 
 
