--- a/business_card.html
+++ b/business_card.html
@@ -106,15 +106,18 @@
     <div class="business-card">
     </div>
     <div class="row justify-content-evenly save-contact">
-      <a class="btn btn-danger btn-lg col-5 bc-button" href="https://ovou.com/" role="button">+Add to Contact</a>
-      <a class="btn btn-danger btn-lg col-5 bc-button" href="https://ovou.com/" role="button">Get in Touch</a>
+      <a class="btn btn-dark btn-lg col-5 bc-button" href="https://ovou.com/" role="button">SAVE CONTACT</a>
+      <a class="btn btn-danger btn-lg col-5 bc-button" href="https://ovou.com/" role="button">CONNECT</a>
     </div>
 
     <hr>
 
     <div class="bc-about-me">
-      Proudly serving Kitchener-Waterloo-Cambridge and all over Ontario.
-      Wheather you wan to BUY, SELL, LEASE and INVEST, I can help you all.<br><br>Getting YOU more for YOUR Real-Estate.
+      🔥 REALTOR®️ in Waterloo Region 🇨🇦🍁 <br>
+      🏡 BUY-SELL-INVEST-LEASE <br>
+      1️⃣ One stop shop <br>
+      📱 Call me today to get started <br>
+      🥇 Win with me
     </div>
 
   </div>
@@ -163,6 +166,7 @@
         </a>
       </div>
     </div>
+    <a class="btn btn-dark btn-lg col-12 bc-big-save-contact-button" href="https://ovou.com/" role="button">SAVE CONTACT</a>
   </div>
 
 
