--- a/business_card.html
+++ b/business_card.html
@@ -48,6 +48,9 @@
 
   <!-- Including CSS file at the bottom so that it takes preceedence over bootstrap styling -->
   <link rel="stylesheet" type="text/css" href="css/style.css">
+
+  <!-- jQuery CDN -->
+  <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
 </head>
 
 
@@ -113,7 +116,7 @@
     <hr>
 
     <div class="bc-about-me">
-      🔥 REALTOR®️ in Waterloo Region 🇨🇦🍁 <br>
+      🔥 REALTOR®️ in Waterloo Region 🇨🇦 <br>
       🏡 BUY-SELL-INVEST-LEASE <br>
       1️⃣ One stop shop <br>
       📱 Call me today to get started <br>
@@ -166,7 +169,7 @@
         </a>
       </div>
     </div>
-    <a class="btn btn-dark btn-lg col-12 bc-big-save-contact-button" href="https://ovou.com/" role="button">SAVE CONTACT</a>
+    <a class="btn btn-dark btn-lg col-12 bc-big-save-contact-button wiggle" href="https://ovou.com/" role="button">SAVE CONTACT</a>
   </div>
 
 
@@ -196,6 +199,9 @@
   </script>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+  <script src="wiggle.js" charset="utf-8"></script>>
+
+
 </body>
 
 </html>
