Updated Fb name

--- a/about.html
+++ b/about.html
@@ -114,7 +114,7 @@
             <li class="nav-item ps-3 pe-3">
               <div class="row d-sm-inline-flex">
                 <div class="col p-0 mx-0">
-                  <a href="https://www.facebook.com/malavrealtor/" class="fa fa-facebook"></a>
+                  <a href="https://www.facebook.com/realtormalav/" class="fa fa-facebook"></a>
                 </div>
                 <div class="col p-0 mx-0">
                   <a href="mailto:realtor.malav@gmail.com" class="fa fa-envelope"></a>
@@ -183,7 +183,7 @@
 
   <!--**************************************Bottom Container**************************************************-->
   <div class="bottom-container">
-    <a href="https://www.facebook.com/malavrealtor/" class="fa fa-facebook"></a>
+    <a href="https://www.facebook.com/realtormalav/" class="fa fa-facebook"></a>
     <a href="mailto:realtor.malav@gmail.com" class="fa fa-envelope"></a>
     <a href="https://www.instagram.com/realtor_malav/" class="fa fa-instagram"></a>
     <a href="https://www.snapchat.com/add/malav_panchal" class="fa fa-snapchat-ghost"></a>
