--- a/business_card.html
+++ b/business_card.html
@@ -109,7 +109,7 @@
     <div class="business-card">
     </div>
     <div class="row justify-content-evenly save-contact">
-      <a class="btn btn-dark btn-lg col-5 bc-button" href="https://ovou.com/" role="button">SAVE CONTACT</a>
+      <a class="btn btn-dark btn-lg col-5 bc-button up-down" href="https://ovou.com/" role="button">SAVE CONTACT</a>
       <a class="btn btn-danger btn-lg col-5 bc-button" href="https://ovou.com/" role="button">CONNECT</a>
     </div>
 
@@ -128,7 +128,7 @@
   <div class="bc-social-container">
     <div class="row d-flex justify-content-center">
       <div class="col-3 col-lg-1 col-md-3 col-sm-3 bc-icon">
-        <a href="https://www.facebook.com/malavrealtor/">
+        <a href="https://www.facebook.com/realtormalav/">
           <img src="images\icons\facebook.png" alt="facebook">
         </a>
       </div>
