--- a/social_media.html
+++ b/social_media.html
@@ -85,7 +85,7 @@
             <li class="nav-item ps-3 pe-3">
               <div class="row d-sm-inline-flex">
                 <div class="col p-0 mx-0">
-                  <a href="https://www.facebook.com/malavrealtor/" class="fa fa-facebook"></a>
+                  <a href="https://www.facebook.com/realtormalav/" class="fa fa-facebook"></a>
                 </div>
                 <div class="col p-0 mx-0">
                   <a href="mailto:realtor.malav@gmail.com" class="fa fa-envelope"></a>
