--- a/business_card.html
+++ b/business_card.html
@@ -49,14 +49,13 @@
   <!-- Including CSS file at the bottom so that it takes preceedence over bootstrap styling -->
   <link rel="stylesheet" type="text/css" href="css/style.css">
 
-  <!-- jQuery CDN -->
-  <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
 </head>
 
 
 <!--**************************************************** BODY **********************************************************-->
 
 <body>
+
 
   <!--**********************************Facebook Messenger*********************************************-->
   <!-- Messenger Chat Plugin Code -->
@@ -109,8 +108,47 @@
     <div class="business-card">
     </div>
     <div class="row justify-content-evenly save-contact">
-      <a class="btn btn-dark btn-lg col-5 bc-button up-down" href="https://ovou.com/" role="button">SAVE CONTACT</a>
-      <a class="btn btn-danger btn-lg col-5 bc-button" href="https://ovou.com/" role="button">CONNECT</a>
+      <a class="btn btn-dark btn-lg col-5 bc-button" href="https://ovou.com/" role="button">SAVE CONTACT</a>
+      <button type="button" class="btn btn-danger btn-lg col-5 bc-button" data-bs-toggle="modal" data-bs-target="#exampleModal" data-bs-whatever="XXX">Connect</button>
+
+
+      <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="exampleModalLabel">Send me a Message</h5>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+
+            <form action="https://getform.io/f/73d0fac4-c91c-42ae-bace-18a9a2113612" method="POST">
+              <div class="modal-body">
+                <div class="w-40 mb-3">
+                  <label for="exampleFormControlInput1" class="form-label">Name</label>
+                  <input type="text" name="name" class="form-control" id="exampleFormControlInput1" placeholder="Your Name">
+                </div>
+                <div class="mb-3">
+                  <label for="exampleFormControlInput1" class="form-label">Email address</label>
+                  <input type="email" name="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+                </div>
+                <div class="mb-3">
+                  <label for="exampleFormControlTextarea1" class="form-label">Message</label>
+                  <textarea type="text" name="message" class="form-control" id="exampleFormControlTextarea1" rows="4" placeholder="Your message..."></textarea>
+                </div>
+              </div>
+
+              <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                <button type="submit" class="btn btn-danger">Send message</button>
+              </div>
+            </form>
+
+          </div>
+        </div>
+      </div>
+
+
+
+
     </div>
 
     <hr>
@@ -199,7 +237,11 @@
   </script>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-  <script src="wiggle.js" charset="utf-8"></script>>
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+  <script src="javascript\index.js" charset="utf-8"></script>
+  <script src="javascript\wiggle.js" charset="utf-8"></script>
+
 
 
 </body>
