--- a/business_card.html
+++ b/business_card.html
@@ -108,7 +108,7 @@
     <div class="business-card">
     </div>
     <div class="row justify-content-evenly save-contact">
-      <a class="btn btn-dark btn-lg col-5 bc-button" href="https://ovou.com/" role="button">SAVE CONTACT</a>
+      <a class="btn btn-dark btn-lg col-5 bc-button" href="images\vcard.vcf" role="button">SAVE CONTACT</a>
       <button type="button" class="btn btn-danger btn-lg col-5 bc-button" data-bs-toggle="modal" data-bs-target="#exampleModal" data-bs-whatever="XXX">Connect</button>
 
 
@@ -203,7 +203,7 @@
         </a>
       </div>
     </div>
-    <a class="btn btn-dark btn-lg col-12 bc-big-save-contact-button wiggle" href="https://ovou.com/" role="button">SAVE CONTACT</a>
+    <a class="btn btn-dark btn-lg col-12 bc-big-save-contact-button wiggle" href="images\vcard.vcf" role="button">SAVE CONTACT</a>
   </div>
 
 
