added business card

--- a/business_card.html
+++ b/business_card.html
@@ -106,9 +106,10 @@
   <!--**************************************Middle Container**************************************************-->
   <div class="bc-middle-container">
     <div class="business-card">
+      <img src="images\Digital_BC.png" class="img-fluid" alt="digital_business_card">
     </div>
     <div class="row justify-content-evenly save-contact">
-      <a class="btn btn-dark btn-lg col-5 bc-button" href="images\vcard.vcf" role="button">SAVE CONTACT</a>
+      <a class="btn btn-dark btn-lg col-5 bc-button" href="images\malav-vcard.vcf" role="button">SAVE CONTACT</a>
       <button type="button" class="btn btn-danger btn-lg col-5 bc-button" data-bs-toggle="modal" data-bs-target="#exampleModal" data-bs-whatever="XXX">Connect</button>
 
 
@@ -160,50 +161,50 @@
   </div>
 
   <div class="bc-social-container">
-    <div class="row d-flex justify-content-center">
-      <div class="col-3 col-lg-1 col-md-3 col-sm-3 bc-icon bc-facebook">
+    <div class="row">
+      <div class="col-3  d-flex justify-content-center bc-icon bc-facebook">
         <a href="https://www.facebook.com/realtormalav/">
           <img src="images\icons\facebook.png" alt="facebook">
         </a>
       </div>
-      <div class="col-3 col-lg-1 col-md-3 col-sm-3 bc-icon bc-instagram">
+      <div class="col-3  d-flex justify-content-center bc-icon bc-instagram">
         <a href="https://www.instagram.com/realtor_malav/">
           <img src="images\icons\Instagram.png" alt="Instagram">
         </a>
       </div>
-      <div class="col-3 col-lg-1 col-md-3 col-sm-3 bc-icon bc-whatsapp">
+      <div class="col-3  d-flex justify-content-center bc-icon bc-whatsapp">
         <a href="https://api.whatsapp.com/send?phone=16477084395&fbclid=IwAR2XTAOAlZdwc0sTbDoxU7Dr_Fnbr5B_zatjztiW1S6z01JpPQ6BpVzjFMA">
           <img src="images\icons\Whatsapp.png" alt="whatsapp">
         </a>
       </div>
-      <div class="col-3 col-lg-1 col-md-3 col-sm-3 bc-icon bc-tiktok">
+      <div class="col-3  d-flex justify-content-center bc-icon bc-tiktok">
         <a href="https://vm.tiktok.com/ZMeynsGHY/">
           <img src="images\icons\Tiktok.png" alt="tiktok">
         </a>
       </div>
 
-      <div class="col-3 col-lg-1 col-md-3 col-sm-3 bc-icon bc-map">
+      <div class="col-3 d-flex justify-content-center bc-icon bc-map">
         <a href="https://goo.gl/maps/vvy8qvX4M38NLnsx6">
           <img src="images\icons\map.png" alt="map">
         </a>
       </div>
-      <div class="col-3 col-lg-1 col-md-3 col-sm-3 bc-icon bc-email">
+      <div class="col-3 d-flex justify-content-center bc-icon bc-email">
         <a href="mailto:realtor.malav@gmail.com">
           <img src="images\icons\email.png" alt="email">
         </a>
       </div>
-      <div class="col-3 col-lg-1 col-md-3 col-sm-3 bc-icon bc-web">
+      <div class="col-3 d-flex justify-content-center bc-icon bc-web">
         <a href="https://malavpanchal.ca/">
           <img src="images\icons\web.png" alt="web">
         </a>
       </div>
-      <div class="col-3 col-lg-1 col-md-3 col-sm-3 bc-icon bc-call">
+      <div class="col-3 d-flex justify-content-center bc-icon bc-call">
         <a href="tel:+16477084395">
           <img src="images\icons\call.png" alt="call">
         </a>
       </div>
     </div>
-    <a class="btn btn-dark btn-lg col-12 bc-big-save-contact-button wiggle" href="images\vcard.vcf" role="button">SAVE CONTACT</a>
+    <a class="btn btn-dark btn-lg col-12 bc-big-save-contact-button wiggle" href="images\malav-vcard.vcf" role="button">SAVE CONTACT</a>
   </div>
 
 
