chnage the connect from small to capital

--- a/business_card.html
+++ b/business_card.html
@@ -110,7 +110,7 @@
     </div>
     <div class="row justify-content-evenly save-contact">
       <a class="btn btn-dark btn-lg col-5 bc-button" href="images\malav-vcard.vcf" role="button">SAVE CONTACT</a>
-      <button type="button" class="btn btn-danger btn-lg col-5 bc-button" data-bs-toggle="modal" data-bs-target="#exampleModal" data-bs-whatever="XXX">Connect</button>
+      <button type="button" class="btn btn-danger btn-lg col-5 bc-button" data-bs-toggle="modal" data-bs-target="#exampleModal" data-bs-whatever="XXX">CONNECT</button>
 
 
       <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
