--- a/business_card.html
+++ b/business_card.html
@@ -106,8 +106,11 @@
   <!--**************************************Middle Container**************************************************-->
   <div class="bc-middle-container">
     <div class="business-card">
-      <img src="images\Digital_BC.png" class="img-fluid" alt="digital_business_card">
+      <a href="images\malav-vcard.vcf">
+        <img src="images\Digital_BC.png" class="img-fluid" alt="digital_business_card">
+      </a>
     </div>
+    
     <div class="row justify-content-evenly save-contact">
       <a class="btn btn-dark btn-lg col-5 bc-button" href="images\malav-vcard.vcf" role="button">SAVE CONTACT</a>
       <button type="button" class="btn btn-danger btn-lg col-5 bc-button" data-bs-toggle="modal" data-bs-target="#exampleModal" data-bs-whatever="XXX">CONNECT</button>
