removed win with me line

--- a/business_card.html
+++ b/business_card.html
@@ -158,7 +158,7 @@
       🏡 BUY-SELL-INVEST-LEASE <br>
       1️⃣ One stop shop <br>
       📱 Call me today to get started <br>
-      🥇 Win with me in your Real-Estate Game
+      <!-- 🥇 Win with me in your Real-Estate Game -->
     </div>
 
   </div>
