--- a/business_card.html
+++ b/business_card.html
@@ -42,6 +42,8 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=PT+Serif&family=Sacramento&family=Slabo+27px&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+
 
   <!-- This link is to use Social Media account logos -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -158,7 +160,7 @@
       🏡 BUY-SELL-INVEST-LEASE <br>
       1️⃣ One stop shop <br>
       📱 Call me today to get started <br>
-      <!-- 🥇 Win with me in your Real-Estate Game -->
+      🥇 Win with me in your Real-Estate Game
     </div>
 
   </div>
@@ -210,14 +212,26 @@
     <a class="btn btn-dark btn-lg col-12 bc-big-save-contact-button wiggle" href="images\malav-vcard.vcf" role="button">SAVE CONTACT</a>
   </div>
 
+  <div class="bc-review">
+    <hr>
+    <h3>Leave a Review <img src="images\icons\review.png" alt="review" style="width:35px"> </h3>
+    <h6>It will take less than a minute😃</h6>
+    <div class="row justify-content-evenly save-contact py-4">
+      <a class="btn btn-light btn-lg col-5" href="images\malav-vcard.vcf" role="button"><img class="review-button google" src="images\Google-Logo.png" alt="google-review">⭐⭐⭐⭐⭐</a>
+      <a class="btn btn-light btn-lg col-5" href="images\malav-vcard.vcf" role="button"><img class="review-button facebook" src="images\Facebook-Logo.png" alt="facebook-review">⭐⭐⭐⭐⭐</a>
+      </div>
+  </div>
+
 
   <!--**************************************Bottom Container**************************************************-->
-  <div class="bottom-container">
-    <a href="https://www.facebook.com/malavrealtor/" class="fa fa-facebook"></a>
+  <div class="bc-bottom-container">
+    <img src="images\Logo_pbr_1.png" alt="coldwell-banker-logo" style="width:8rem">
+
+    <!-- <a href="https://www.facebook.com/malavrealtor/" class="fa fa-facebook"></a>
     <a href="mailto:realtor.malav@gmail.com" class="fa fa-envelope"></a>
     <a href="https://www.instagram.com/realtor_malav/" class="fa fa-instagram"></a>
     <a href="https://www.snapchat.com/add/malav_panchal" class="fa fa-snapchat-ghost"></a>
-    <a href="tel:+16477084395" class="fa fa-mobile"></a>
+    <a href="tel:+16477084395" class="fa fa-mobile"></a> -->
     <p class="copyright">© 2022 Malav Panchal.</p>
   </div>
 
