added coldwell banker logo and hyperlinked it

--- a/business_card.html
+++ b/business_card.html
@@ -217,21 +217,17 @@
     <h3>Leave a Review <img src="images\icons\review.png" alt="review" style="width:35px"> </h3>
     <h6>It will take less than a minute😃</h6>
     <div class="row justify-content-evenly save-contact py-4">
-      <a class="btn btn-light btn-lg col-5" href="images\malav-vcard.vcf" role="button"><img class="review-button google" src="images\Google-Logo.png" alt="google-review">⭐⭐⭐⭐⭐</a>
-      <a class="btn btn-light btn-lg col-5" href="images\malav-vcard.vcf" role="button"><img class="review-button facebook" src="images\Facebook-Logo.png" alt="facebook-review">⭐⭐⭐⭐⭐</a>
-      </div>
+      <a class="btn btn-light btn-lg col-5 send-review" href="https://g.page/r/Cd2i_GaA_PZrEAo/review" role="button"><img class="review" src="images\Google-Logo.png" alt="google-review">⭐⭐⭐⭐⭐</a>
+      <a class="btn btn-light btn-lg col-5 send-review" href="https://www.facebook.com/realtormalav/" role="button"><img class="review" src="images\Facebook-Logo.png" alt="facebook-review">⭐⭐⭐⭐⭐</a>
+    </div>
   </div>
 
 
   <!--**************************************Bottom Container**************************************************-->
   <div class="bc-bottom-container">
-    <img src="images\Logo_pbr_1.png" alt="coldwell-banker-logo" style="width:8rem">
-
-    <!-- <a href="https://www.facebook.com/malavrealtor/" class="fa fa-facebook"></a>
-    <a href="mailto:realtor.malav@gmail.com" class="fa fa-envelope"></a>
-    <a href="https://www.instagram.com/realtor_malav/" class="fa fa-instagram"></a>
-    <a href="https://www.snapchat.com/add/malav_panchal" class="fa fa-snapchat-ghost"></a>
-    <a href="tel:+16477084395" class="fa fa-mobile"></a> -->
+    <a href="https://coldwellbankerpbr.com/our_realtors/malav-panchal/">
+      <img class="coldwell-logo" src="images\Logo_pbr_1.png" alt="coldwell-banker-logo">
+    </a>
     <p class="copyright">© 2022 Malav Panchal.</p>
   </div>
 
