--- a/business_card.html
+++ b/business_card.html
@@ -167,48 +167,74 @@
 
   <div class="bc-social-container">
     <div class="row">
-      <div class="col-3  d-flex justify-content-center bc-icon bc-facebook">
+      <div class="col-3  d-flex justify-content-center bc-icon">
         <a href="https://www.facebook.com/realtormalav/">
           <img src="images\icons\facebook.png" alt="facebook">
         </a>
       </div>
-      <div class="col-3  d-flex justify-content-center bc-icon bc-instagram">
+      <div class="col-3  d-flex justify-content-center bc-icon">
         <a href="https://www.instagram.com/realtor_malav/">
           <img src="images\icons\Instagram.png" alt="Instagram">
         </a>
       </div>
-      <div class="col-3  d-flex justify-content-center bc-icon bc-whatsapp">
+      <div class="col-3  d-flex justify-content-center bc-icon">
         <a href="https://api.whatsapp.com/send?phone=16477084395&fbclid=IwAR2XTAOAlZdwc0sTbDoxU7Dr_Fnbr5B_zatjztiW1S6z01JpPQ6BpVzjFMA">
           <img src="images\icons\Whatsapp.png" alt="whatsapp">
         </a>
       </div>
-      <div class="col-3  d-flex justify-content-center bc-icon bc-tiktok">
+      <div class="col-3  d-flex justify-content-center bc-icon">
         <a href="https://vm.tiktok.com/ZMeynsGHY/">
           <img src="images\icons\Tiktok.png" alt="tiktok">
         </a>
       </div>
-
-      <div class="col-3 d-flex justify-content-center bc-icon bc-map">
-        <a href="https://goo.gl/maps/vvy8qvX4M38NLnsx6">
-          <img src="images\icons\map.png" alt="map">
-        </a>
-      </div>
-      <div class="col-3 d-flex justify-content-center bc-icon bc-email">
-        <a href="mailto:realtor.malav@gmail.com">
-          <img src="images\icons\email.png" alt="email">
-        </a>
-      </div>
-      <div class="col-3 d-flex justify-content-center bc-icon bc-web">
-        <a href="https://malavpanchal.ca/">
-          <img src="images\icons\web.png" alt="web">
-        </a>
-      </div>
-      <div class="col-3 d-flex justify-content-center bc-icon bc-call">
-        <a href="tel:+16477084395">
-          <img src="images\icons\call.png" alt="call">
-        </a>
-      </div>
     </div>
+
+    <hr>
+    <div class="container-fluid d-flex justify-content-start social-bar">
+      <a href="https://goo.gl/maps/vvy8qvX4M38NLnsx6">
+        <img class="social-icon" src="images\icons\map.png" alt="map">508 Riverbend Dr, Kitchener
+      </a>
+    </div>
+    <div class="container-fluid d-flex justify-content-start social-bar">
+      <a href="mailto:realtor.malav@gmail.com">
+        <img class="social-icon" src="images\icons\email.png" alt="email">realtor.malav@gmail.com
+      </a>
+    </div>
+    <div class="container-fluid d-flex justify-content-start social-bar">
+      <a href="https://malavpanchal.ca/">
+        <img class="social-icon" src="images\icons\web.png" alt="web">malavpanchal.ca/
+      </a>
+    </div>
+    <div class="container-fluid d-flex justify-content-start social-bar">
+      <a href="tel:+16477084395">
+        <img class="social-icon" src="images\icons\call.png" alt="call">+1(647)-708-4395
+      </a>
+    </div>
+
+
+    <!-- <div class="row">
+    <div class="col bc-icon">
+      <a href="https://goo.gl/maps/vvy8qvX4M38NLnsx6">
+        <img src="images\icons\map.png" alt="map">
+      </a>
+    </div>
+    <div class="col bc-icon">
+      <a href="mailto:realtor.malav@gmail.com">
+        <img src="images\icons\email.png" alt="email">
+      </a>
+    </div>
+    <div class="col bc-icon">
+      <a href="https://malavpanchal.ca/">
+        <img src="images\icons\web.png" alt="web">
+      </a>
+    </div>
+    <div class="col bc-icon">
+      <a href="tel:+16477084395">
+        <img src="images\icons\call.png" alt="call">
+      </a>
+    </div>
+</div> -->
+
     <a class="btn btn-dark btn-lg col-12 bc-big-save-contact-button wiggle" href="images\malav-vcard.vcf" role="button">SAVE CONTACT</a>
   </div>
 
