--- a/business_card.html
+++ b/business_card.html
@@ -191,31 +191,26 @@
 
     <hr>
 
-
     <div class="container-fluid d-flex justify-content-start social-bar">
       <a href="mailto:realtor.malav@gmail.com">
         <img class="social-icon" src="images\icons\email.png" alt="email">realtor.malav@gmail.com
       </a>
     </div>
-    <hr style="margin:0px 0px 0px 75px">
     <div class="container-fluid d-flex justify-content-start social-bar">
       <a href="tel:+16477084395">
         <img class="social-icon" src="images\icons\call.png" alt="call">+1(647)-708-4395
       </a>
     </div>
-    <hr style="margin:0px 0px 0px 75px">
     <div class="container-fluid d-flex justify-content-start social-bar">
       <a href="https://goo.gl/maps/vvy8qvX4M38NLnsx6">
-        <img class="social-icon" src="images\icons\map.png" alt="map">508 Riverbend Dr, Kitchener
+        <img class="social-icon" src="images\icons\map.png" alt="map" style="padding-right:26px;">508 Riverbend Dr, Kitchener
       </a>
     </div>
-    <hr style="margin:0px 0px 0px 75px">
     <div class="container-fluid d-flex justify-content-start social-bar">
       <a href="https://malavpanchal.ca/">
         <img class="social-icon" src="images\icons\web.png" alt="web">malavpanchal.ca/
       </a>
     </div>
-    <hr style="margin:0px 0px 0px 75px">
 
     <a class="btn btn-dark btn-lg col-12 bc-big-save-contact-button wiggle" href="images\malav-vcard.vcf" role="button">SAVE CONTACT</a>
   </div>
