adjusted map icon to lef 6px

--- a/business_card.html
+++ b/business_card.html
@@ -203,7 +203,7 @@
     </div>
     <div class="container-fluid d-flex justify-content-start social-bar">
       <a href="https://goo.gl/maps/vvy8qvX4M38NLnsx6">
-        <img class="social-icon" src="images\icons\map.png" alt="map" style="padding-right:26px;">508 Riverbend Dr, Kitchener
+        <img class="social-icon" src="images\icons\map.png" alt="map" style="padding-left:6px;">508 Riverbend Dr, Kitchener
       </a>
     </div>
     <div class="container-fluid d-flex justify-content-start social-bar">
