--- a/about.html
+++ b/about.html
@@ -20,7 +20,10 @@
   </script>
   <script>
     window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
+
+    function gtag() {
+      dataLayer.push(arguments);
+    }
     gtag('js', new Date());
 
     gtag('config', 'UA-207251914-1');
@@ -139,15 +142,15 @@
 
     <!--**************************************About section Container**************************************************-->
     <div class="about-page-container">
-      <div class="row">
-        <div class="col">
+      <div class="row align-items-center">
+        <div class="col-6">
           <div class="about-pic" id="about-pic">
-            <img src="images\about-photo.jpg" alt="about-pic">
+            <img class="img-fluid rounded" src="images\about-photo.jpg" alt="about-pic">
           </div>
         </div>
-        <div class="col px-5">
+        <div class="col-6 px-5">
           <h2>MALAV PANCHAL</h2>
-          <h3>Sales Representative</h3>
+          <h3>REALTOR®</h3>
           <p class="about-text" id="about-text">Malav Panchal began his career in real estate after being inspired by his own home buying experience. <br><br>
             An industrious REALTOR® who enjoys interacting with others, Malav takes the time to forge honest, meaningful relationships with his clients.
             Through frequent communication and clarification of industry terms and procedures, he strives to ensure they are fully informed and understand all aspects of any purchase or sale.<br><br>
@@ -171,7 +174,7 @@
             The fundamental core of any professional relationship is trust. It is important to me that my clients feel that I have their best intentions always in mind.</p>
         </div>
       </div>
-      <div class="col img-fluid" style="text-align: right";>
+      <div class="col img-fluid" style="text-align: right" ;>
         <img class="value-pic" src="images\value.jpg" alt="value-pic">
       </div>
     </div>
