--- a/about.html
+++ b/about.html
@@ -142,7 +142,7 @@
 
     <!--**************************************About section Container**************************************************-->
     <div class="about-page-container">
-      <div class="row align-items-center">
+      <div class="row">
         <div class="col-6">
           <div class="about-pic" id="about-pic">
             <img class="img-fluid rounded" src="images\about-photo.jpg" alt="about-pic">
