updated about html for responsive image

--- a/about.html
+++ b/about.html
@@ -142,13 +142,11 @@
 
     <!--**************************************About section Container**************************************************-->
     <div class="about-page-container">
-      <div class="row">
-        <div class="col-6">
-          <div class="about-pic" id="about-pic">
-            <img class="img-fluid rounded" src="images\about-photo.jpg" alt="about-pic">
-          </div>
+      <div class="row align-items-center">
+        <div class="col about-pic" id="about-pic" style="text-align: center">
+          <img src="images\about-photo.jpg" alt="about-pic">
         </div>
-        <div class="col-6 px-5">
+        <div class="col px-5">
           <h2>MALAV PANCHAL</h2>
           <h3>REALTOR®</h3>
           <p class="about-text" id="about-text">Malav Panchal began his career in real estate after being inspired by his own home buying experience. <br><br>
