--- a/about.html
+++ b/about.html
@@ -143,8 +143,8 @@
     <!--**************************************About section Container**************************************************-->
     <div class="about-page-container">
       <div class="row align-items-center">
-        <div class="col about-pic" id="about-pic" style="text-align: center">
-          <img src="images\about-photo.jpg" alt="about-pic">
+        <div class="col about-pic" style="text-align: center">
+          <img  id="about-pic" src="images\about-photo.jpg" alt="about-pic">
         </div>
         <div class="col px-5">
           <h2>MALAV PANCHAL</h2>
