updated re/max address

--- a/contact.html
+++ b/contact.html
@@ -152,7 +152,7 @@
               <img src="images\map.png" alt="map">
             </a></p>
           <h2>Our Office</h2>
-          <p><a href="https://goo.gl/maps/vvy8qvX4M38NLnsx6">508 Riverbend Drive Kitchener, ON N2K 3S2</a></p>
+          <p><a href="https://goo.gl/maps/hR7n9zEV43asr4g26">83 Erb St W, Waterloo, ON N2L 6C2</a></p>
         </div>
         <div class="col-lg-4">
           <p><a href="tel:+16477084395">
