--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
       </div>
       <div class="hours col">
         <h2>Location & Hours</h2>
-        <p class="address" id="address">508 Riverbend Drive <br />Kitchener, ON N2K 3S2</p>
+        <p class="address" id="address">83 Erb St W <br>Waterloo, ON N2L 6C2</p>
       </div>
       <div class="col">
         <table class="table d-inline-flex justify-content-sm-center">
