--- a/about.html
+++ b/about.html
@@ -144,7 +144,7 @@
     <div class="about-page-container">
       <div class="row align-items-center">
         <div class="col about-pic" style="text-align: center">
-          <img  id="about-pic" src="images\about-photo.jpg" alt="about-pic">
+          <img class="rounded " id="about-pic" src="images\about-photo.jpg" alt="about-pic">
         </div>
         <div class="col px-5">
           <h2>MALAV PANCHAL</h2>
