Updating business card

--- a/about.html
+++ b/about.html
@@ -149,7 +149,7 @@
         <div class="col px-5">
           <h2>MALAV PANCHAL</h2>
           <h3>REALTOR®</h3>
-          <p class="about-text" id="about-text">Malav Panchal began his career in real estate after being inspired by his own home buying experience. <br><br>
+          <p class="about-text" id="about-text">
             An industrious REALTOR® who enjoys interacting with others, Malav takes the time to forge honest, meaningful relationships with his clients.
             Through frequent communication and clarification of industry terms and procedures, he strives to ensure they are fully informed and understand all aspects of any purchase or sale.<br><br>
             Malav studied Electronic Engineering. During his time, he volunteered as an Orientation Leader, encouraging and assisting new students.
