--- a/business_card.html
+++ b/business_card.html
@@ -204,8 +204,8 @@
     </div>
     <hr style="margin:0px 0px 0px 80px">
     <div class="container-fluid d-flex justify-content-start social-bar">
-      <a href="https://goo.gl/maps/vvy8qvX4M38NLnsx6">
-        <img class="social-icon" src="images\icons\map.png" alt="map" style="padding-left:6px;">508 Riverbend Dr, Kitchener
+      <a href="https://goo.gl/maps/mPXS3qEFw7XnXWqV8">
+        <img class="social-icon" src="images\icons\map.png" alt="map" style="padding-left:6px;">83 Erb St W, Waterloo
       </a>
     </div>
     <hr style="margin:0px 0px 0px 80px">
@@ -232,10 +232,10 @@
 
   <!--**************************************Bottom Container**************************************************-->
   <div class="bc-bottom-container">
-    <a href="https://coldwellbankerpbr.com/our_realtors/malav-panchal/">
-      <img class="coldwell-logo" src="images\Logo_pbr_1.png" alt="coldwell-banker-logo">
+    <a href="https://www.remaxtwincity.ca/agent/malav-panchal">
+      <img class="remax-logo" src="images\remax-logo.png" alt="remax-logo">
     </a>
-    <p class="copyright">© 2021-22 Malav Panchal.</p>
+    <p class="copyright">© 2022 Malav Panchal.</p>
   </div>
 
 
