correcting times to centre

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
         <p class="address" id="address">83 Erb St W <br>Waterloo, ON N2L 6C2</p>
       </div>
       <div class="col">
-        <table class="table d-inline-flex justify-content-sm-center">
+        <table class="table d-inline-flex justify-content-center">
           <tbody>
             <tr>
               <td>Monday</td>
