--- a/index.html
+++ b/index.html
@@ -113,6 +113,18 @@
             <li class="nav-item">
               <a class="nav-link" href="contact.html">Contact Us</a>
             </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Visitor's tool</a>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="Visitor_tool\Buyer_guide.html">Buyer's Guide</a></li>
+                <li><a class="dropdown-item" href="Visitor_tool\Seller_guide.html">Seller's Guide</a></li>
+                <li><a class="dropdown-item" href="Visitor_tool\blog.html">Blog</a></li>
+                <li>
+                  <hr class="dropdown-divider">
+                </li>
+                <li><a class="dropdown-item" href="https://kwar.ca/tag/stats/">Market Update</a></li>
+              </ul>
+            </li>
             <li class="nav-item ps-5 pe-2">
               <a class="nav-link nav-phone" href="tel:+16477084395">647-708-4395</a>
             </li>
@@ -171,7 +183,7 @@
       </div>
       <div class="hours col">
         <h2>Location & Hours</h2>
-        <p class="address" id="address">83 Erb St W <br>Waterloo, ON N2L 6C2</p>
+        <p class="address" id="address">83 Erb St W,<br>Waterloo, ON N2L 6C2</p>
       </div>
       <div class="col">
         <table class="table d-inline-flex justify-content-center">
