added remax logo in the bottom

--- a/index.html
+++ b/index.html
@@ -241,6 +241,10 @@
 
   <!--**************************************Bottom Container**************************************************-->
   <div class="bottom-container">
+    <a href="https://www.remaxtwincity.ca/agent/malav-panchal">
+      <img class="remax-logo" src="images\remax-logo.png" alt="remax-logo">
+    </a>
+    <hr>
     <a href="https://www.facebook.com/realtormalav/" class="fa fa-facebook"></a>
     <a href="mailto:realtor.malav@gmail.com" class="fa fa-envelope"></a>
     <a href="https://www.instagram.com/realtor_malav/" class="fa fa-instagram"></a>
