--- a/index.html
+++ b/index.html
@@ -116,9 +116,10 @@
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Visitor's tool</a>
               <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="Visitor_tool\Buyer_guide.html">Buyer's Guide</a></li>
-                <li><a class="dropdown-item" href="Visitor_tool\Seller_guide.html">Seller's Guide</a></li>
+                <li><a class="dropdown-item" href="Visitor_tool\buyer_guide.html">Buyer's Guide</a></li>
+                <li><a class="dropdown-item" href="Visitor_tool\seller_guide.html">Seller's Guide</a></li>
                 <li><a class="dropdown-item" href="Visitor_tool\blog.html">Blog</a></li>
+                <li><a class="dropdown-item" href="Visitor_tool\mortgage_calculator.html">Mortgage Calculator</a></li>
                 <li>
                   <hr class="dropdown-divider">
                 </li>
