updating more pages

--- a/index.html
+++ b/index.html
@@ -101,30 +101,39 @@
             <li class="nav-item">
               <a class="nav-link active" href="index.html">Home</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="about.html">About</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="services.html">Services</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="social_media.html">Social Media</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="contact.html">Contact Us</a>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Buyers</a>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="Buyers\buying_tips.html">Buying Tips</a></li>
+                <li><a class="dropdown-item" href="Buyers\things_to_avoid.html">Things to avoid</a></li>
+                <li><a class="dropdown-item" href="Buyers\home_maintenance.html">Home Maintenance</a></li>
+                <li><a class="dropdown-item" href="Buyers\first_time_home_buyer.html">First time Home Buyer</a></li>
+              </ul>
             </li>
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Visitor's tool</a>
+              <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Sellers</a>
               <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="Visitor_tool\buyer_guide.html">Buyer's Guide</a></li>
-                <li><a class="dropdown-item" href="Visitor_tool\seller_guide.html">Seller's Guide</a></li>
-                <li><a class="dropdown-item" href="Visitor_tool\blog.html">Blog</a></li>
-                <li><a class="dropdown-item" href="Visitor_tool\mortgage_calculator.html">Mortgage Calculator</a></li>
+                <li><a class="dropdown-item" href="social_media.html">Home Selling Tips</a></li>
+                <li><a class="dropdown-item" href="Sellers\things_to_avoid.html">Things to avoid</a></li>
+                <li><a class="dropdown-item" href="Sellers\home_staging.html">Importance of Home Staging</a></li>
+                <li><a class="dropdown-item" href="Sellers\evalution.html">Home Evaluation</a></li>
+              </ul>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">About Me</a>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="About_Me\social_media.html">Social Media Presence</a></li>
+                <li><a class="dropdown-item" href="About_Me\why_hire_me.html">Why Hire Me</a></li>
+                <li><a class="dropdown-item" href="About_Me\reviews.html">Reviews</a></li>
+                <li><a class="dropdown-item" href="About_Me\mortgage_calculator.html">Mortgage Calculator</a></li>
                 <li>
                   <hr class="dropdown-divider">
                 </li>
                 <li><a class="dropdown-item" href="https://kwar.ca/tag/stats/">Market Update</a></li>
               </ul>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="contact.html">Contact Us</a>
             </li>
             <li class="nav-item ps-5 pe-2">
               <a class="nav-link nav-phone" href="tel:+16477084395">647-708-4395</a>
