updated new pages

--- a/index.html
+++ b/index.html
@@ -120,10 +120,10 @@
               </ul>
             </li>
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">About Me</a>
+              <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="About_Me\about.html" role="button" aria-expanded="false">About Me</a>
               <ul class="dropdown-menu">
                 <li><a class="dropdown-item" href="About_Me\social_media.html">Social Media Presence</a></li>
-                <li><a class="dropdown-item" href="About_Me\why_hire_me.html">Why Hire Me</a></li>
+                <li><a class="dropdown-item" href="About_Me\hire_me.html">Why Hire Me</a></li>
                 <li><a class="dropdown-item" href="About_Me\reviews.html">Reviews</a></li>
                 <li><a class="dropdown-item" href="About_Me\mortgage_calculator.html">Mortgage Calculator</a></li>
                 <li>
