--- a/About_Me/social_media.html
+++ b/About_Me/social_media.html
@@ -43,7 +43,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
   <!-- Including CSS file at the bottom so that it takes preceedence over bootstrap styling -->
-  <link rel="stylesheet" type="text/css" href="css/social_style.css">
+  <link rel="stylesheet" type="text/css" href="../css/social_style.css">
 </head>
 
 
@@ -56,7 +56,7 @@
     <nav class="navbar fixed-top navbar-light navbar-expand-lg">
       <div class="container-fluid">
         <a class="navbar-brand d-flex justify-content-lg-start ps-5" href="index.html">
-          <img src="images\Malav_Logo.png" alt="logo" style="width:200px;">
+          <img src="..\images\Malav_Logo.png" alt="logo" style="width:200px;">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
